--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,10 @@ input[type="number"] {
 	-moz-appearance: none;
 	appearance: none;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
