--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html {
 @layer base {
   :root {
     --primary-brand-color: #f37e11;
-    --background: white;
+    --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -39,8 +39,5 @@ html {
 @layer base {
   * {
     @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
   }
 }
